--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="root">
+      <h1>Hola Mundo</h1>
       <script type="module" src="/src/main.jsx"></script>
     </div>
   </body>
