--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="root">
       <h1>Hola Mundo</h1>
-      <script type="module" src="/src/main.jsx"></script>
+      <script type="module" src="https://github.com/Kevni-Rodrigo-Wawryniuk/Carta_De_Presentacion/src/main.jsx"></script>
     </div>
   </body>
 </html>
