cambio de diseño

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="descripcion" content="Curriculum" />
     <meta name="Author" content="kevin_Rodrigo_Wawryniuk" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="png" href="/src/componentes/images/PresentacionHeader.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
     <title>Presentacion</title>
   </head>
