--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Author" content="kevin_Rodrigo_Wawryniuk" />
     <link rel="icon" type="png" href="/src/componentes/images/PresentacionHeader.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
-    <title>Presentacion</title>
+    <title>Curriculum_Kevin_Rodrigo_Wawryniuk</title>
   </head>
   <body>
     <div id="root"></div>
